// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldWrapper snapshots tests renders TextField component 1`] = `
<Fragment>
  <TextField
    InputLabelProps="{[object Object]"
    error={false}
    floatingLabelText="This is a test textfield component"
    fullWidth={true}
    id=""
    name="testField"
    required={false}
    select={false}
    type="text"
    variant="standard"
  />
</Fragment>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component appending a class 1`] = `
<Fragment>
  <TextField
    InputLabelProps="{[object Object]"
    className="requiredField"
    error={false}
    floatingLabelText="This is a test textfield component"
    fullWidth={true}
    id=""
    name="testField"
    required={false}
    select={false}
    type="text"
    variant="standard"
  />
</Fragment>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component with shrink:true 1`] = `
<Fragment>
  <TextField
    InputLabelProps="{[object Object]"
    error={false}
    floatingLabelText="This is a test textfield component"
    floatinglabelfixed={true}
    fullWidth={true}
    id=""
    name="testField"
    required={false}
    select={false}
    type="text"
    variant="standard"
  />
</Fragment>
`;
